Make section colours more readable

--- a/src/components/Section/Section.module.scss
+++ b/src/components/Section/Section.module.scss
@@ -3,8 +3,8 @@
   padding: 1rem;
 
   &.strong {
-    background-color: #335;
-    color: #fff;
+    background-color: #f3f5ef;
+    color: #5b6270;
   }
 
   &.subtle {
