--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -13,7 +13,7 @@ $margin-bottom-subtitle: 2rem;
 $breakpoint-mobile: 768px;
 
 // Header component styles
-.headerContainer {
+header {
   text-align: center;
   margin-bottom: $margin-bottom-container;
 
