--- a/src/components/PropsBasedCard/PropsBasedCard.module.scss
+++ b/src/components/PropsBasedCard/PropsBasedCard.module.scss
@@ -23,8 +23,8 @@ $transition-default: transform 0.3s ease;
 $emoji-size: 2rem;
 $emoji-margin: 0.5rem;
 
-// Mixins
-@mixin card-base {
+// Base class contains all common styles - eliminates mixin duplication
+.propsBasedCard {
   background: $color-white;
   padding: $padding-default;
   border-radius: $border-radius;
@@ -32,13 +32,48 @@ $emoji-margin: 0.5rem;
   transition: $transition-default;
   cursor: pointer;
   text-align: center;
-}
-
-.default {
-  @include card-base;
 
   &:hover {
     transform: $transform-hover-default;
+  }
+
+  // Modifiers use & syntax
+  &.compact {
+    padding: $padding-compact;
+
+    .title {
+      font-size: 1rem;
+      margin-bottom: 0.6rem;
+    }
+
+    .description {
+      font-size: 0.9rem;
+      line-height: 1.4;
+    }
+
+    .emoji {
+      font-size: 1.6rem;
+      margin-bottom: 0.3rem;
+    }
+  }
+
+  &.highlighted {
+    background: $gradient-highlighted;
+    color: $color-white;
+    border: $border-highlighted;
+
+    .title {
+      color: $color-white;
+    }
+
+    .description {
+      color: $color-white-transparent;
+    }
+
+    &:hover {
+      transform: $transform-hover-highlighted;
+      box-shadow: $box-shadow-highlighted;
+    }
   }
 }
 
@@ -49,58 +84,21 @@ $emoji-margin: 0.5rem;
 }
 
 .title {
-  color: $color-primary !important;
-  margin-bottom: 1rem !important;
+  color: $color-primary;
+  margin-bottom: 1rem;
   font-size: 1.2rem;
   font-weight: 600;
-  margin-top: 0 !important;
-  padding: 0 !important;
+  margin-top: 0;
+  padding: 0;
 }
 
 .description {
-  color: $color-text-dark !important;
+  color: $color-text-dark;
   line-height: 1.6;
-  margin-bottom: 0 !important;
-  margin-top: 0 !important;
-  padding: 0 !important;
+  margin-bottom: 0;
+  margin-top: 0;
+  padding: 0;
 }
 
-// Compact variant
-.compact {
-  padding: $padding-compact;
-
-  .title {
-    font-size: 1rem !important;
-    margin-bottom: 0.6rem !important;
-  }
-
-  .description {
-    font-size: 0.9rem !important;
-    line-height: 1.4 !important;
-  }
-
-  .emoji {
-    font-size: 1.6rem;
-    margin-bottom: 0.3rem;
-  }
-}
-
-// Highlighted variant
-.highlighted {
-  background: $gradient-highlighted;
-  color: $color-white;
-  border: $border-highlighted;
-
-  .title {
-    color: $color-white !important;
-  }
-
-  .description {
-    color: $color-white-transparent !important;
-  }
-
-  &:hover {
-    transform: $transform-hover-highlighted;
-    box-shadow: $box-shadow-highlighted;
-  }
-}
+// Compact variant - removed as now handled in base class modifier
+// Highlighted variant - removed as now handled in base class modifier
